Trying to fix text wrapping

--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @tailwind utilities;
+html{
+  overscroll-behavior: none;
+  overflow: hidden;
+}
 
 input, select, div {
   /* 
